--- a/assets/css/login_items.css
+++ b/assets/css/login_items.css
@@ -1,20 +1,3 @@
-.login-form {
-    padding-top: 15%;
-    text-align: center;
-    width: 100%;
-}
-
-div.col {
-    display: flex;
-    flex-direction: column;
-    width: 200px;
-}
-
-div.col input:not(:last-child) {
-    margin-bottom: 10px;
-}
-
-form {
-    display: inline-block;
-    position: relative;
+body {
+    margin: 100px 20% 100px 20%;
 }
